# OpenMTSN

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  OpenMTSN_Executive_Brief.html  README.md  docker-compose.yml  openmtsn_executive_brief.md
.github/workflows/: main.yml
agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
api/: Dockerfile  mutmut_config.py  pyproject.toml
api/app/: __init__.py  config.py  main.py  models.py  redis_client.py  routing_engine.py
api/tests/: conftest.py  test_api.py  test_hardening.py  test_mtls_logic.py  test_routing_engine.py
certs/: ca.crt  ca.key  dashboard.crt  dashboard.key  node-alpha.crt  node-alpha.key  node-beta.crt  node-beta.key  node-gamma.crt  node-gamma.key  server.crt  server.key
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  CyberTheme.css  NetworkMap.tsx  Sidebar.tsx  index.css  types.ts  useTopologySocket.ts
dashboard/src/components/: TimezoneSelector.tsx
docs/: OPERATIONS.md  SOVEREIGN_AUDIT.md  cloudflare-setup.md
infra/aws/: main.tf
infra/azure/: main.tf
infra/monitoring/: prometheus.yml
infra/scripts/: generate_certs.py
scripts/: jam_swarm.sh
simulator/: chaos.sh  mosquitto.conf
