[package]
name = "openmtsn-agent"
version = "0.1.0"
edition = "2021"
description = "OpenMTSN Edge Telemetry Agent — lightweight daemon for drones, phones, and Raspberry Pis"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
