[package]
name = "openmtsn-agent"
version = "0.1.0"
edition = "2021"
description = "OpenMTSN Edge Telemetry Agent — lightweight daemon for drones, phones, and Raspberry Pis"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["h3", "rustls-tls", "json"] }
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
