[project]
name = "openmtsn-api"
version = "0.1.0"
description = "OpenMTSN — High-Assurance Control Plane for Disaster Response Multi-Terrain Networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "websockets>=12.0",
    "hypercorn>=0.17.0",
    "aioquic>=1.2.0",
    "cryptography>=42.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "fakeredis[json]>=2.23.0",
    "mutmut>=2.4.4",
    "ruff>=0.4.8",
    "black>=24.4.2",
]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
